crc/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend-deployment
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-deployment
  strategy: {}
  template:
    metadata:
      labels:
        app: backend-deployment
    spec:
      tolerations:
        - key: "node.kubernetes.io/disk-pressure"
          operator: "Exists"
          effect: "NoSchedule"
      automountServiceAccountToken: false
      containers:
      - image: bassant41656/backend-image:latest
        name: backend-image
        ports:
          - containerPort: 8000
        volumeMounts:
          - name: secret-volume
            mountPath: /run/secrets/db-password
            subPath: MYSQL_ROOT_PASSWORD
            readOnly: true
        resources: {}
          
      volumes:
        - name: secret-volume
          secret:
            secretName: db-password

status: {}
