crc/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql-deployment
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-deployment
  template:
    metadata:
      labels:
        app: mysql-deployment
    spec:
      # toleration:
        #- key: "node.kubernetes.io/disk-pressure"
        # operator: "Exists"
        # effect: "NoSchedule"
        #initContainers:
        #- name: fix-permissions
        # image: busybox
        # command: ["sh", "-c", "chown -R 1000:1000 /var/lib/mysql"]
      serviceAccountName: default
      securityContext: 
       fsGroup: 1000650000
       seccompProfile:
          type: RuntimeDefault

      containers:
        - name: mysql
          image: mysql:8.0
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000650000
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources: {}
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql #/data/mysql/
          readinessProbe:
             tcpSocket:
               port: 3306 
             initialDelaySeconds: 80
             periodSeconds: 10
             timeoutSeconds: 5
             failureThreshold: 3
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
