crc/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend-deployment
  name: backend-deployment
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: backend-deployment
  type: ClusterIP
status:
  loadBalancer: {}
