crc/proxy-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: proxy-deployment
  name: proxy-svc
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
      nodePort: 30443
  selector:
    app: proxy-deployment
  type: NodePort
status:
  loadBalancer: {}
