crc/proxy-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: proxy-route
spec:
  port:
    targetPort: 8080
  tls:
    termination: passthrough
  to:
    kind: ""
    name: proxy-svc
    weight: null
status: {}
